tests/ui/pk-field-no-partition.stderr
error: field named 'pk' must be annotated with #[partition_key]
 --> tests/./ui/pk-field-no-partition.rs:5:5
  |
5 |     pk: String,
  |     ^^^^^^^^^^
